package main.java.struction.adapter.objectAdapter;

/**
 * Create with IntelliJ IDEA
 * Author:YangZhao
 * Date:2024/4/6
 * Time:12:09
 */
public interface VGADisplay {
    void display();
}
