@startuml
'https://plantuml.com/class-diagram

interface VGADisplay {
    + display()
}
class Samsung {
    + display()
}
class HDMIOutput {
    + hdOutput()
}
class Adapter {
    - HDMIOutput  hdOutput
    + display()
}

VGADisplay <|-- Samsung
HDMIOutput <--* Adapter
VGADisplay <|.. Adapter

@enduml